cabal-version:      2.4
name:               pod-market-tracker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Enrico Bandiera
maintainer:         enrico.bandiera@mondora.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  ghc-options:
    -Wall
  exposed-modules:
    App.Config
    App.Database
    App.Logging
    App.Monad
    PoD.Api
    PoD.Parser
    PoD.Rendering
    PoD.Types
    Telegram.Bot.Api.Client
    Telegram.Bot.Api.Types
    Telegram.Bot.Auth
    Telegram.Bot.Bot
    Telegram.Monad
    Tracker.Tracker
    Utils.Aeson
    Utils.Tabular

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , base
    , base64-bytestring
    , bytestring
    , containers
    , data-default
    , data-flags
    , di
    , fast-logger
    , FontyFruity
    , generic-lens
    , http-client
    , http-client-tls
    , http-types
    , iso8601-time
    , JuicyPixels
    , lens-aeson
    , microlens-platform
    , mtl
    , optparse-applicative
    , parsec
    , postgresql-simple
    , qm-interpolated-string
    , random
    , Rasterific
    , streaming
    , tabular
    , text
    , text-show
    , time
    , transformers
    , unliftio
    , uri-encode
    , wreq

  hs-source-dirs:   src
  default-language: Haskell2010

executable pod-market-tracker
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base
    , fast-logger
    , FontyFruity
    , optparse-applicative
    , pod-market-tracker
    , text

  hs-source-dirs:   app
  default-language: Haskell2010
